Sort changes going into API; needs internal update.

--- a/templates/default/css/newsletter.css
+++ b/templates/default/css/newsletter.css
@@ -173,3 +173,8 @@ ul.msgctrl li:hover {
 .droppable {
     border: 1px dotted #F92 !important;
 }
+
+#statebox {
+    display: inline;
+    color: #777;
+}
