--- a/templates/default/css/newsletter.css
+++ b/templates/default/css/newsletter.css
@@ -89,9 +89,9 @@ li.dummy {
 
 #messagebrowser div ul.section {
     font-size: 10px;
-    margin: 0px;
-    padding: 0px;
-    padding-bottom: 3px;
+    margin: 2px 0px;
+    padding: 1px 1px 4px 1px;
+    border: 1px solid #f4f4f4;
     white-space: normal;
 }
 
@@ -170,8 +170,11 @@ ul.msgctrl li:hover {
 	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#c9c9c9');
 }
 
-.droppable {
-    border: 1px dotted #F92 !important;
+.droplist {
+    border: 1px solid #F92 !important;
+    box-shadow: 0 0 8px rgba(255, 189, 112, 1);
+    -webkit-box-shadow: 0 0 8px rgba(255, 189, 112, 1);
+    -moz-box-shadow: 0 0 8px rgba(255, 189, 112, 1);
 }
 
 #statebox {
