Revised newsletter release date handling.
This will now correctly handle the case where the article may end up going into an old, but yet unreleased, newsletter.

--- a/templates/default/css/compose.css
+++ b/templates/default/css/compose.css
@@ -67,6 +67,14 @@ dd.next1 {
     font-size: 85%;
 }
 
+#schedule-next1.late {
+    padding-left: 16px;
+    background-image: url('../images/newsletter/late_newsletter.png');
+    background-repeat: no-repeat;
+    background-position: center left;
+    color: #C20101;
+}
+
 dd.next2 {
     color: #999;
     font-size: 75%;
