--- a/templates/default/css/newsletter.css
+++ b/templates/default/css/newsletter.css
@@ -189,3 +189,18 @@ ul.msgctrl li:hover {
 .saving {
     color: #44DD39;
 }
+
+div.section h3 {
+    padding-left: 20px;
+    background-image: url("../images/newsletter/section.png");
+    background-repeat: no-repeat;
+    background-position: 0px 0px;
+}
+
+div.section.required h3 {
+    background-image: url("../images/newsletter/required_ok.png");
+}
+
+div.section.required.empty h3 {
+    background-image: url("../images/newsletter/required_empty.png");
+}
