--- a/templates/default/css/newsletter.css
+++ b/templates/default/css/newsletter.css
@@ -221,6 +221,16 @@ div.section.required h3 {
 /*    background-image: url("../images/newsletter/required_ok.png");*/
 }
 
+div.section.required h3 span.reqtitle {
+    font-size: 9px;
+    color: #555;
+}
+
 div.section.required.empty h3 {
     background-image: url("../images/newsletter/required_empty.png");
+}
+
+div.section.required.empty h3 span.reqtitle {
+    font-size: 9px;
+    color: #A00;
 }
