--- a/templates/default/css/newsletter.css
+++ b/templates/default/css/newsletter.css
@@ -223,7 +223,7 @@ div.section.required h3 {
 
 div.section.required h3 span.reqtitle {
     font-size: 9px;
-    color: #555;
+    color: #0A0;
 }
 
 div.section.required.empty h3 {
