--- a/templates/default/js/medialibrary/test.css
+++ b/templates/default/js/medialibrary/test.css
@@ -24,14 +24,35 @@
 }
 
 #progressbox {
+	border-radius: 3px;
+    position: relative;
 	margin: 5px 0;
-	height: 15px;
+	height: 20px;
 	background: #545A74;
 }
 
 #progress {
+	border-radius: 3px;
+    position: absolute;
+    left: 0px;
+    top: 0px;
     display: block;
-    width: 10%;
-	height: 15px;
-	background: #dd5A74;
+    width: 0;
+	height: 20px;
+	background: #dd5A74 url('upload.gif') repeat-x top left;
+}
+
+#progressmsg {
+	border-radius: 3px;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    display: block;
+    width: 100%;
+	height: 20px;
+    color: #FFF;
+    text-align: center;
+    line-height: 20px;
+    font-size: 12px;
+    text-shadow: 2px 2px 1px #333;
 }
