--- a/templates/default/css/uploader.css
+++ b/templates/default/css/uploader.css
@@ -1,25 +1,34 @@
-#wrapper {
-	margin: 100px auto;
-	width: 50%;
-}
+/* The following assumes a HTML setup as:
+ *
+ * <div ... > <!-- container for drag&drop feature -->
+ *     <div id="ml-droparea">
+ *         <div id="ml-dropzone">Drop image to upload here</div>
+ *     </div>
+ *     <div id="progressbox">
+ *         <div id="ml-progress"></div>
+ *         <div id="ml-progressmsg"></div>
+ *     </div>
+ * </div>
+ */
 
-#droparea {
+/* outer drop area styling */
+#ml-droparea {
 	background: #545A74;
 	padding: 10px;
 	clear: both;
 	text-align: center;
 }
 
-#droparea.hover {
+#ml-droparea.hover {
 	background: #121a3f;
 }
 
-#droparea.disabled {
+#ml-droparea.disabled {
 	background: #666;
 }
 
-
-#droparea div {
+/* inner drop area */
+#ml-dropzone {
 	border: #ddd 1px dashed;
     margin: 0px 0px;
 	color: white;
@@ -27,7 +36,11 @@
 	text-align: center;
 }
 
-#progressbox {
+/* Progress display. Note that the outer div has relative position
+ * so that the progress message can be overlaid over the progress
+ * bar with absolute positioning.
+ */
+#ml-progressbox {
 	border-radius: 3px;
     position: relative;
 	margin: 5px 0;
@@ -35,7 +48,7 @@
 	background: #545A74;
 }
 
-#progress {
+#ml-progress {
 	border-radius: 3px;
     position: absolute;
     left: 0px;
@@ -43,10 +56,10 @@
     display: block;
     width: 0;
 	height: 20px;
-	background: #dd5A74 url('upload.gif') repeat-x top left;
+	background: #dd5A74 url('../images/upload.gif') repeat-x top left;
 }
 
-#progressmsg {
+#ml-progressmsg {
 	border-radius: 3px;
     position: absolute;
     left: 0px;
