--- a/templates/default/css/button.css
+++ b/templates/default/css/button.css
@@ -119,7 +119,7 @@
 }
 
 /* disabled */
-.button.disabled {
+.button.disabled, input.button:disabled {
     color: #555;
     border: solid 1px #a3a3a3;
 
@@ -133,7 +133,7 @@
 	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#a5a5a5');
 }
 
-.button.disabled:hover {
+.button.disabled:hover, input.button:disabled:hover {
     color: #555;
     border: solid 1px #a3a3a3;
 
@@ -147,7 +147,7 @@
 	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#a5a5a5');
 }
 
-.button.disabled:active {
+.button.disabled:active, input.button:disabled:active {
     color: #555;
     border: solid 1px #a3a3a3;
 
