Centralise and rationalise page top padding.

--- a/templates/default/css/core.css
+++ b/templates/default/css/core.css
@@ -8,6 +8,10 @@
 @import url('controls.css');    /* sprite-based control buttons         */
 @import url('inputstyles.css'); /* general input styling                */
 
+#content {
+    margin-top: 40px;
+}
+
 .newsagent #topbar {
     position: absolute;
     left: 0px;
