--- a/templates/default/js/messagecontrol/css/messagecontrol.css
+++ b/templates/default/js/messagecontrol/css/messagecontrol.css
@@ -30,16 +30,22 @@ ul.msgctrl li {
 }
 
 ul.msgctrl li:first-child {
-	-webkit-border-radius: 3px 0px 0px 3px;
-	-moz-border-radius: 3px 0px 0px 3px;
-	border-radius: 3px 0px 0px 3px;
+	-webkit-border-top-left-radius: 3px;
+	-moz-border-top-left-radius: 3px;
+	border-top-left-radius: 3px;
+	-webkit-border-bottom-left-radius: 3px;
+	-moz-border-bottom-left-radius: 3px;
+	border-bottom-left-radius: 3px;
 }
 
 
 ul.msgctrl li:last-child {
-	-webkit-border-radius: 0px 3px 3px 0px;
-	-moz-border-radius: 0px 3px 3px 0px;
-	border-radius: 0px 3px 3px 0px;
+	-webkit-border-top-right-radius: 3px;
+	-moz-border-top-right-radius: 3px;
+	border-top-right-radius: 3px;
+	-webkit-border-bottom-right-radius: 3px;
+	-moz-border-bottom-right-radius: 3px;
+	border-bottom-right-radius: 3px;
     border-right: solid 1px #b1b1b1;
 }
 
