Clipboard copy for RSS feed.

--- a/templates/default/css/feedlist.css
+++ b/templates/default/css/feedlist.css
@@ -64,7 +64,18 @@ div.numeric > input {
     background: #fff;
 }
 
-input[type=text].rss {
+input[type=text].rssbox {
     padding: 4px 4px 4px 23px;
     background: url(../images/feed-icon-14.png) no-repeat 2px center;
+    width: 245px;
+}
+
+#rssclip {
+    float: right;
+    padding: 1px;
+    border: 1px outset grey;
+}
+
+#rssclip.zeroclipboard-is-active {
+    border: 1px inset grey;
 }
